@@ -1,3 +1,12 @@
+2006-05-23  Dan Winship  <danw@novell.com>
+
+	* plugins/switcher.c (switchToWindow): use ss->windows here as
+	well so that multiple activeNum==0 windows don't get skipped.
+	(switchTerminate): Remove the screen grab right away so that
+	keystrokes don't get dropped. bnc 177650
+	(switchPreparePaintScreen, switchPaintScreen,
+	switchDonePaintScreen): update for that
+
 2006-05-22  Dan Winship  <danw@novell.com>
 
 	* src/window.c (moveResizeWindow): deal with both vertical and
